Bug 1493662 - Bug 1475387 follow-up: Remove use of nsDocShellLoadInfo and make nsIMsgMailNewsUrl.loadURI scriptable again. r=jorgk

--HG--
extra : rebase_source : d822d8fd10427994c03fdb8d2e31d9152e6e95bb